Bring back the B4H logo, fix whitespaces page layouts

--- a/src/styles/_joinGivethCommunity.scss
+++ b/src/styles/_joinGivethCommunity.scss
@@ -7,7 +7,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 10% center;
-  padding: 20px 20px 50px 20px;
+  padding: 100px 20px 50px 20px;
   color: white;
 
   @include make-flex();
