--- a/src/styles/_mainMenu.scss
+++ b/src/styles/_mainMenu.scss
@@ -2,8 +2,7 @@
   background-color: $header-background;
 
   .navbar-brand {
-    padding-bottom: .5225rem;    
-    padding-top: 0;
+    padding-top: .2125rem;  
   }
 
   &.show {
