--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .page-layout {
-  padding: 80px 20px 50px 20px;
+  padding: 120px 20px 50px 20px;
   &.reduced-padding {
     padding-top: 50px;
   }
